<resources>
    <string name="app_name">Polima</string>
    <string name="onboarding_header_1">Citizens</string>
    <string name="onboarding_header_2">Statement</string>
    <string name="onboarding_header_3">Vision</string>
    <string name="onboarding_description_1">Play your part in getting electoral promises fulfilled</string>
    <string name="onboarding_description_2">Together they can be  accountable</string>
    <string name="onboarding_description_3">Get notified when promises are verified</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome,</string>
    <string name="app_logo">app logo</string>

    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tellus ac justo, tempus netus massa sodales suspendisse lorem id. Odio dolor sed sagittis .</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="fp_rest">Forgotten password? Reset</string>
    <string name="full_name">Full Name</string>
    <string name="nin_number">NIN Number</string>
    <string name="gender">Gender</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="vote">Vote on fulfilled promises</string>
    <string name="check">Check for verified fulfilled Promises</string>
    <string name="view">View Candidate\'s or Aspirant\'s Profile</string>
    <string name="view_scorecard">View Candidate\'s Scorecard</string>
    <string name="view_promises">View Candidate\'s Promises</string>
    <string name="search_bar_hint">Search for your preferred politician</string>
    <string name="biography">Biography</string>
    <string name="education">Education</string>
    <string name="age">Age: </string>
    <string name="political_aspirations">Political aspirations</string>
    <string name="ok">OK</string>
    <string name="sign_in_description">Sign in to view politicians details, and the various  promises made during campaigns</string>
    <string name="sign_up_description">Sign up to get access to view and vote on promises made by Politicians</string>
    <string name="vote_description">Vote on the promises verified if it\'s been fulfilled or abandoned. This helps in maintaining accountability in the system. \nBe a part in making your voice count</string>
    <string name="candidate_bio_description">View information and biography of politicians and their political history.</string>
    <string name="check_verified_promises_description">Find out how many users have voted and the promises that have been fulfilled or not fulfilled.</string>
    <string name="score_card_description">Find out how well politician has performed over the past years while in office.</string>
    <string name="promises_description">View, rate and comment on promises made by politician.</string>
    <string name="politician_note_found">Politician Note Found!</string>
    <string name="nin">NIN</string>
    <string name="email">Email</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="verificaation_message">A verification mail has been sent to your email address</string>
    <string name="candidates_promises">Candidate\'s Promises</string>
    <string name="filter_projects">Filter Projects</string>
    <string name="completed">Completed</string>
    <string name="ongoing">Ongoing</string>
    <string name="not_started">Not Started</string>
    <string name="abandoned">Abandoned</string>
    <string name="project_status">Project Status: %s</string>
    <string name="see_more_on_this_promise">See More on this Promise</string>
    <string name="tell_others_what_you_think">Tell others what you think about this project</string>
    <string name="type_in_your_comment">Type in your comment</string>
    <string name="send_action">Send action</string>
    <string name="rate_this_project">Rate this project</string>
    <string name="rate">Rate</string>
    <string name="candidate_scorecard">Candidate\'s scorecard</string>
    <string name="total_number_of_ratings">Total Number of Ratings</string>
    <string name="overall_rating">Overall Rating</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>