<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="@dimen/no_space">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_sub"
            tools:context=".ui.auth.SignInFragment">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/ic_app_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/header_text"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/header_text_start_margin"
                android:layout_marginTop="@dimen/header_text_top_margin"
                app:layout_constraintStart_toStartOf="@+id/app_logo"
                app:layout_constraintTop_toBottomOf="@+id/app_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sub_header_text"
                style="@style/SubHeader"
                android:layout_width="@dimen/no_space"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sub_text_top_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/header_text"
                app:layout_constraintTop_toBottomOf="@+id/header_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_email"
                style="@style/textLayoutBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:endIconCheckable="true"
                app:endIconMode="clear_text"
                app:helperText="Example@gmail.com"
                app:layout_constraintEnd_toEndOf="@+id/sub_header_text"
                app:layout_constraintStart_toStartOf="@+id/sub_header_text"
                app:layout_constraintTop_toBottomOf="@+id/sub_header_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/textInputBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_layout_size"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_password"
                style="@style/textLayoutBox"
                android:layout_width="@dimen/no_space"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="@+id/sub_header_text"
                app:layout_constraintStart_toStartOf="@+id/sub_header_text"
                app:layout_constraintTop_toBottomOf="@+id/ti_email"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/textInputBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_input_layout_size"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                style="@style/Widget.MaterialComponents.Button.MaiButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:enabled="false"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="@+id/ti_password"
                app:layout_constraintStart_toStartOf="@+id/ti_password"
                app:layout_constraintTop_toBottomOf="@+id/ti_password" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_forgot_password"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:fontFamily="@font/muli"
                android:text="@string/fp_rest"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
                app:layout_constraintStart_toStartOf="@+id/sign_in_button"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.customOutlinedButton"
                android:layout_width="@dimen/no_space"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/default_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
                app:layout_constraintStart_toStartOf="@+id/sign_in_button" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_no_account"
                style="@style/TextAppearance.AppCompat.Body1.OtherText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
                app:layout_constraintEnd_toEndOf="@+id/tv_forgot_password"
                app:layout_constraintStart_toStartOf="@+id/tv_forgot_password"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/progress_bar"
        layout="@layout/layout_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>